--- a/01_Structure/index.htm
+++ b/01_Structure/index.htm
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/navigation.css">
     <link rel="stylesheet" href="css/formulaire.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/galerie.css">
+    <link rel="stylesheet" href="images/">
 </head>
 <body>
     <div id="entete">
@@ -142,6 +144,32 @@
             </table>
         </section>
        </div> <!-- fin #horaire -->
+       <div id="galerie">
+        <section>
+            <figure class="galerie">
+                <figure class="galerie__figure">
+                <img class="galerie__img "src="images/" alt="Maisonneuve">
+                <figcaption class="galerie__caption">Le sous titre de l'image</figcaption>
+                </figure>
+                <figure class="galerie__figure">
+                    <img class="galerie__img "src="images/" alt="Maisonneuve">
+                    <figcaption class="galerie__caption">Le sous titre de l'image</figcaption>
+                    </figure>
+                    <figure class="galerie__figure">
+                        <img class="galerie__img "src="images/" alt="Maisonneuve">
+                        <figcaption class="galerie__caption">Le sous titre de l'image</figcaption>
+                        </figure>
+                        <figure class="galerie__figure">
+                            <img class="galerie__img "src="images/" alt="Maisonneuve">
+                            <figcaption class="galerie__caption">Le sous titre de l'image</figcaption>
+                            </figure>
+                            <figure class="galerie__figure">
+                                <img class="galerie__img "src="images/" alt="Maisonneuve">
+                                <figcaption class="galerie__caption">Le sous titre de l'image</figcaption>
+                                </figure>
+            </figure> 
+        </section>
+       </div>
        <div id="inscription">
         <section id="inscription__2">
             <h2>Inscription</h2>
